fixed first column looking cramped with left padding

--- a/angular-inventory/src/app/product-list/product-list.component.css
+++ b/angular-inventory/src/app/product-list/product-list.component.css
@@ -27,9 +27,9 @@
 }
 
 .mat-cell {
-    padding: 1vw 1vh 1vh 0;
+    padding: 1vw 1vh 1vh 1vw;
   }
-  
+
 .mat-table{
     height:75vh;
     max-width: 100%;
